01-traefik/01-traefik-deploy.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: traefik
  name: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik
      terminationGracePeriodSeconds: 60
      containers:
        - name: traefik
          image: traefik:2.2.8
          args:
            - --configFile=/config/traefik.toml
            #- "--entryPoints.web.address=:8000"
            #- "--entryPoints.websecure.address=:8443"
            #- "--entryPoints.traefik.address=:9000"
            #- "--api.dashboard=true"
            #- "--api.insecure=false"
            #- "--ping=true"
            #- "--providers.kubernetescrd"
            #- "--log.level=INFO"

          readinessProbe:
            httpGet:
              path: /ping
              port: 9000
            failureThreshold: 1
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 2

          livenessProbe:
            httpGet:
              path: /ping
              port: 9000
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 2

          resources:
            limits:
              cpu: 300m
              memory: 150Mi
            requests:
              cpu: 100m
              memory: 50Mi

          ports:
            - name: web
              containerPort: 8000
              protocol: TCP

            - name: websecure
              containerPort: 8443
              protocol: TCP

            - name: traefik
              containerPort: 9000
              protocol: TCP

          volumeMounts:
            - mountPath: /data
              name: storage-volume
            - name: traefik-config
              mountPath: /config
            - name: traefik-custom
              mountPath: /conf.d
      volumes:
        - name: storage-volume
          persistentVolumeClaim:
            claimName: traefik-acme-storage
        - name: traefik-config
          configMap:
            name: traefik-config
        - name: traefik-custom
          configMap:
            name: traefik-custom
      nodeSelector:
        traefik: "true"

---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
  labels:
    app: traefik
spec:
  selector:
    app: traefik
  type: LoadBalancer
  ports:
    - port: 80
      name: web
      targetPort: web
    - port: 443
      name: websecure
      targetPort: websecure
---
