01-traefik/03-traefik-dashboard.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: traefik
  labels:
    app: traefik
spec:
  type: ClusterIP
  selector:
    app: traefik
  ports:
    - port: 9000
      name: traefik
      targetPort: traefik

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  labels:
    app: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`a.labs.cometari.eu`)
      kind: Rule
      middlewares:
        - name: auth
      #  - name: redirectscheme
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    certResolver: letsencrypt
