01-traefik/05-middleware.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: auth
  namespace: traefik
  labels:
    app: traefik
spec:
  basicAuth:
    secret: admin-auth

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirectscheme
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: http-catch-all
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: HostRegexp(`{host:.+}`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
          port: 80
      middlewares:
        - name: redirectscheme
          namespace: default
