01-traefik/06-metrics-ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-metrics
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`a.labs.cometari.com`) && Path(`/metrics`)
      kind: Rule
      services:
        - name: prometheus@internal
          kind: TraefikService
  tls:
    certResolver: letsencrypt
